--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ dependencies {
             "io.appium:java-client:8.3.0",
             "commons-io:commons-io:2.11.0",
             "org.junit.jupiter:junit-jupiter:5.9.2",
-            "org.slf4j:slf4j-simple:1.7.32"
+            "org.slf4j:slf4j-simple:1.7.32",
+            "org.seleniumhq.selenium:selenium-java:4.8.3"
     )
 }
 
