--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@ dependencies {
             "commons-io:commons-io:2.11.0",
             "org.junit.jupiter:junit-jupiter:5.9.2",
             "org.slf4j:slf4j-simple:1.7.32",
-            "org.seleniumhq.selenium:selenium-java:4.8.3"
+            "org.seleniumhq.selenium:selenium-java:4.8.3",
+            'org.aeonbits.owner:owner:1.0.12'
     )
 }
 
