Updated the properties files

--- a/src/test/resources/configuration/realdevice.properties
+++ b/src/test/resources/configuration/realdevice.properties
@@ -1,10 +1,10 @@
 #Common properties
-deviceHost=emulator
+deviceHost=realdevice
 deviceName=
 platformVersion=
 
 #Device data
-udid=emulator-5554
+udid=01021FFBA000PH
 
 #App data
 appRootPath=
