Updated config variables for the real device host

--- a/src/test/resources/configuration/browserstack.properties
+++ b/src/test/resources/configuration/browserstack.properties
@@ -1,21 +1,19 @@
 #Common properties
 deviceHost=browserstack
-deviceName=
-platformVersion=
+deviceName=Google Pixel 7 Pro
+platformVersion=13.0
 
 #Device data
-platformName=
+platformName=android
 
 #App data
-appPackage=
-appActivity=
-buildName=
+buildName=Android test build
 
 #Browserstack data
 remoteUrl=
-projectName=
-testRunName=
-browserStackDebug=
+projectName=Experiment UI Automation project - Wiki Android
+testRunName=OnboardingScreenTest
+browserStackDebug=true
 browserStackAppUrl=
 browserStackUsername=
 browserStackAccessToken=
