--- a/src/test/resources/configuration/emulator.properties
+++ b/src/test/resources/configuration/emulator.properties
@@ -1,15 +1,15 @@
 #Common properties
 deviceHost=emulator
-deviceName=
-platformVersion=
+deviceName=Pixel 6 Pro API 33
+platformVersion=13.0
 
 #Device data
 udid=emulator-5554
 
 #App data
-appRootPath=
-appPackage=
-appActivity=
+appRootPath=/src/test/resources/apk/org.wikipedia.apk
+appPackage=org.wikipedia
+appActivity=org.wikipedia.main.MainActivity
 
 #Driver data
-remoteURL=
+remoteUrl=http://127.0.0.1:4723
