--- a/src/test/resources/configuration/realdevice.properties
+++ b/src/test/resources/configuration/realdevice.properties
@@ -1,15 +1,15 @@
 #Common properties
 deviceHost=realdevice
-deviceName=
-platformVersion=
+deviceName=Pixel 4 XL Android 13
+platformVersion=13.0
 
 #Device data
 udid=01021FFBA000PH
 
 #App data
-appRootPath=
-appPackage=
-appActivity=
+appRootPath=/src/test/resources/apk/org.wikipedia.apk
+appPackage=org.wikipedia
+appActivity=org.wikipedia.main.MainActivity
 
 #Driver data
-remoteURL=
+remoteUrl=http://127.0.0.1:4723
