--- a/src/test/resources/configuration/browserstack.properties
+++ b/src/test/resources/configuration/browserstack.properties
@@ -3,17 +3,19 @@ deviceHost=browserstack
 deviceName=Google Pixel 7 Pro
 platformVersion=13.0
 
-#Device data
-platformName=android
+#Browserstack project data
+browserstackRemoteUrl=http://%s:%s@hub-cloud.browserstack.com/wd/hub
+browserstackProjectName=Experiment UI Automation project - Wiki Android
+browserstackTestRunName=OnboardingScreenTest
+browserstackDebug=true
 
-#App data
-buildName=Android test build
+#Browserstack credentials
+browserstackUsername=
+browserstackAccessToken=
 
-#Browserstack data
-remoteUrl=
-projectName=Experiment UI Automation project - Wiki Android
-testRunName=OnboardingScreenTest
-browserStackDebug=true
-browserStackAppUrl=
-browserStackUsername=
-browserStackAccessToken=
+#Browserstack app data
+browserstackBuildName=Android test build
+browserstackAppUrl=bs://0eea88ad42acf0c1982876495f76c1699ec72bd5
+
+#Browserstack device data
+browserstackPlatformName=android
